--- a/resources/admin/scss/_forms.scss
+++ b/resources/admin/scss/_forms.scss
@@ -2,4 +2,8 @@
   --bs-card-bg: #fff;
   --bs-card-border-radius: 8px;
   --bs-card-border-color: rgb(17 24 39 / 0.05);
+
+  .extended-select {
+    --ms-bg: var(--bs-body-bg);
+  }
 }
